[gd_scene load_steps=27 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Floor/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Parede/Parede.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Hud/Curso_Cruz00_16.png" type="Texture" id=4]
[ext_resource path="res://Itens/Item_M4A1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Itens/Item_Lanterna.tscn" type="PackedScene" id=6]
[ext_resource path="res://Itens/Item_Chave.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Inventario/vazio_icon90.png" type="Texture" id=8]
[ext_resource path="res://UI/Inventario/Slot01.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Inventario/PainelDescritivoInventario.gd" type="Script" id=10]
[ext_resource path="res://UI/Inventario/Chave_icon64.png" type="Texture" id=11]
[ext_resource path="res://UI/Inventario/FlashLight_Icon64.png" type="Texture" id=12]
[ext_resource path="res://UI/Inventario/M4A1_icon64.png" type="Texture" id=13]
[ext_resource path="res://UI/Hud/HUD.gd" type="Script" id=14]
[ext_resource path="res://Porta/Porta.tscn" type="PackedScene" id=15]
[ext_resource path="res://Porta/AreaPorta.gd" type="Script" id=16]
[ext_resource path="res://Lanterna/spriteLanterna.png" type="Texture" id=17]
[ext_resource path="res://Lanterna/BateriaLanterna.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://UI/Fonts/pixel/Fipps-Regular.otf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 5
font_data = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "ItensHud",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://UI/Fonts/titulo/Just One.ttf"

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
extra_spacing_char = 5
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.545098, 0.270588, 0.0352941, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1, 1, 1.58846 )

[node name="Mundo" type="Node"]
__meta__ = {
"_edit_vertical_guides_": [ -326.797 ]
}

[node name="Cenario" type="Node" parent="."]

[node name="Floor" parent="Cenario" instance=ExtResource( 2 )]

[node name="Parede" parent="Cenario" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 2, 0, 5.2955, 44.0753 )

[node name="Parede3" parent="Cenario" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 2, -20, 5.2955, 44.0753 )

[node name="Parede2" parent="Cenario" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 5, 0, 0, 0, 2, 20, 5.2955, 44.0753 )

[node name="Bancada" parent="Cenario" instance=ExtResource( 3 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 7, 0.2955, 42.0753 )

[node name="Bancada2" parent="Cenario" instance=ExtResource( 3 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.2955, 42.0753 )

[node name="Bancada3" parent="Cenario" instance=ExtResource( 3 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -7, 0.2955, 42.0753 )

[node name="Personagens" type="Node" parent="."]

[node name="Player" parent="Personagens" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 37.6132, 0 )

[node name="Itens" type="Node" parent="."]

[node name="Item_Chave" parent="Itens" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.22967, 2.79386, 41.0894 )
nomeDoItem = "Chave A"
descricaoDoItem = "Chave Da Porta Azul"

[node name="Item_Lanterna" parent="Itens" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0615268, 2.71854, 40.9743 )
collision_layer = 16
collision_mask = 16
nomeDoItem = "Lanterna"
descricaoDoItem = "Lanterna de Led"

[node name="Item_M4A1" parent="Itens" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.29497, 2.78955, 40.9977 )
collision_layer = 16
collision_mask = 16
nomeDoItem = "M4A1"
descricaoDoItem = "Arma de Fogo"

[node name="UI" type="Node" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.45547
margin_right = 2.45544
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="UI/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescricaoItem" type="Label" parent="UI/HUD"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -175.0
margin_bottom = -75.0
custom_fonts/font = SubResource( 2 )
text = "item"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeHudItem" type="Node" parent="UI/HUD"]

[node name="Panel" type="Panel" parent="UI/HUD/NodeHudItem"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -161.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iconeHudItem" type="AnimatedSprite" parent="UI/HUD/NodeHudItem/Panel"]
position = Vector2( 14, 50 )
frames = SubResource( 3 )
animation = "ItensHud"

[node name="labelQuantidade" type="Label" parent="UI/HUD/NodeHudItem/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.5
margin_top = 24.5
margin_right = 18.5
margin_bottom = 61.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.870588, 0.85098, 0.85098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "x:"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventario" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoDoInventario" type="Panel" parent="UI/Inventario"]
visible = false
self_modulate = Color( 0, 0, 0, 0.776471 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FundoDoSlots" type="Panel" parent="UI/Inventario"]
self_modulate = Color( 0.286275, 0.662745, 0.945098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -285.0
margin_top = -200.0
margin_right = 285.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot01" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]

[node name="Slot02" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_left = 130.0
margin_right = 220.0

[node name="Slot03" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_left = 240.0
margin_right = 330.0

[node name="Slot04" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_top = 160.0
margin_bottom = 250.0

[node name="Slot05" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_left = 130.0
margin_top = 160.0
margin_right = 220.0
margin_bottom = 250.0

[node name="Slot06" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_left = 240.0
margin_top = 160.0
margin_right = 330.0
margin_bottom = 250.0

[node name="Slot07" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_top = 290.0
margin_bottom = 380.0

[node name="Slot08" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_left = 130.0
margin_top = 290.0
margin_right = 220.0
margin_bottom = 380.0

[node name="Slot09" parent="UI/Inventario/FundoDoSlots" instance=ExtResource( 9 )]
margin_left = 240.0
margin_top = 290.0
margin_right = 330.0
margin_bottom = 380.0

[node name="PainelDescritivoInventario" type="Panel" parent="UI/Inventario/FundoDoSlots"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.0
margin_top = 20.0
margin_right = -19.9999
margin_bottom = 380.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImagemReferenciaItem" type="TextureRect" parent="UI/Inventario/FundoDoSlots/PainelDescritivoInventario"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 160.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDescricaoItem" type="Label" parent="UI/Inventario/FundoDoSlots/PainelDescritivoInventario"]
margin_left = 20.0
margin_top = 170.0
margin_right = 97.0
margin_bottom = 184.0
text = "Descrição:"
valign = 1

[node name="PainelDescritivoDoItem" type="Panel" parent="UI/Inventario/FundoDoSlots/PainelDescritivoInventario"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_top = 190.0
margin_right = 180.0
margin_bottom = 270.0

[node name="CaixaTextoDescricaoItem" type="TextEdit" parent="UI/Inventario/FundoDoSlots/PainelDescritivoInventario/PainelDescritivoDoItem"]
self_modulate = Color( 0.929412, 0.278431, 0.278431, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -35.0
margin_right = 75.0
margin_bottom = 35.0
text = "descrição do item"
readonly = true
hiding_enabled = true
wrap_enabled = true

[node name="ButtonUsar" type="Button" parent="UI/Inventario/FundoDoSlots/PainelDescritivoInventario"]
margin_left = 25.728
margin_top = 285.432
margin_right = 66.728
margin_bottom = 305.432
text = "Usar"

[node name="ButtonEquipar" type="Button" parent="UI/Inventario/FundoDoSlots/PainelDescritivoInventario"]
margin_left = 25.728
margin_top = 320.0
margin_right = 174.728
margin_bottom = 344.0
text = "Equipar"

[node name="ButtonDropar" type="Button" parent="UI/Inventario/FundoDoSlots/PainelDescritivoInventario"]
margin_left = 117.048
margin_top = 285.432
margin_right = 175.048
margin_bottom = 305.432
text = "Dropar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayerLanterna" type="CanvasLayer" parent="UI"]

[node name="SpriteBateriaLanterna" type="Sprite" parent="UI/CanvasLayerLanterna"]
visible = false
position = Vector2( 51.8503, 43.7364 )
scale = Vector2( 0.121156, 0.121156 )
texture = ExtResource( 17 )

[node name="BateriaLanterna" type="ProgressBar" parent="UI/CanvasLayerLanterna"]
visible = false
margin_left = 74.0
margin_top = 51.0
margin_right = 226.0
margin_bottom = 78.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outros" type="Node" parent="."]

[node name="Porta" parent="Outros" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5799, 21.1345 )
chave = "Chave A"

[node name="AreaPorta" type="Area" parent="Outros"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.04023, 1.70933, 20.8922 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="Outros/AreaPorta"]
shape = SubResource( 8 )

[node name="BateriaLanterna" parent="Outros" instance=ExtResource( 18 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 12.5135, 2.26708, 37.0784 )
[connection signal="gui_input" from="UI/HUD/Cursor" to="Personagens/Player" method="_on_Cursor_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot01" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot01_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot02" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot02_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot03" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot03_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot04" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot04_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot05" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot05_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot06" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot06_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot07" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot07_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot08" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot08_gui_input"]
[connection signal="gui_input" from="UI/Inventario/FundoDoSlots/Slot09" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_Slot09_gui_input"]
[connection signal="draw" from="UI/Inventario/FundoDoSlots/PainelDescritivoInventario/ImagemReferenciaItem" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_ImagemReferenciaItem_draw"]
[connection signal="button_down" from="UI/Inventario/FundoDoSlots/PainelDescritivoInventario/ButtonUsar" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_ButtonUsar_button_down"]
[connection signal="button_down" from="UI/Inventario/FundoDoSlots/PainelDescritivoInventario/ButtonEquipar" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_ButtonEquipar_button_down"]
[connection signal="button_down" from="UI/Inventario/FundoDoSlots/PainelDescritivoInventario/ButtonDropar" to="UI/Inventario/FundoDoSlots/PainelDescritivoInventario" method="_on_ButtonDropar_button_down"]
[connection signal="body_entered" from="Outros/AreaPorta" to="Outros/AreaPorta" method="_on_AreaPorta_body_entered"]
[connection signal="body_exited" from="Outros/AreaPorta" to="Outros/AreaPorta" method="_on_AreaPorta_body_exited"]
